// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable Aktiivisen sarakkeen nimen uudelleen klikkaaminen kääntää järjestyksen 1`] = `
<table
  class="table"
>
  <thead
    class="table__head"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__th table__label"
      >
        <div
          class="table__labeltext"
        >
          <span>
            Nimi
          </span>
          <span
            class="table__sortindicator table__sortindicator--visible"
          >
            <span
              aria-hidden="true"
              class="material-icons icon icon--inline"
            >
              arrow_drop_up
            </span>
          </span>
        </div>
      </th>
      <th
        class="table__th table__label"
      >
        <div
          class="table__labeltext"
        >
          <span>
            Oppilaitos
          </span>
          <span
            class="table__sortindicator"
          />
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
      data-row="4"
    >
      <td
        class="table__td"
        title="Osmo"
      >
        Osmo
      </td>
      <td
        class="table__td"
        title="Celsiuksen koulu"
      >
        Celsiuksen koulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="2"
    >
      <td
        class="table__td"
        title="Heli"
      >
        Heli
      </td>
      <td
        class="table__td"
        title="Beetakaroteenikoulu"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="1"
    >
      <td
        class="table__td"
        title="Heikki"
      >
        Heikki
      </td>
      <td
        class="table__td"
        title="Aakkoskoulu"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="3"
    >
      <td
        class="table__td"
        title="Aatu"
      >
        Aatu
      </td>
      <td
        class="table__td"
        title="Deltakoulu"
      >
        Deltakoulu
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable Renderöityy oikein 1`] = `
<table
  class="table"
>
  <thead
    class="table__head"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__th table__label"
      >
        <div
          class="table__labeltext"
        >
          <span>
            Nimi
          </span>
          <span
            class="table__sortindicator table__sortindicator--visible"
          >
            <span
              aria-hidden="true"
              class="material-icons icon icon--inline"
            >
              arrow_drop_down
            </span>
          </span>
        </div>
      </th>
      <th
        class="table__th table__label"
      >
        <div
          class="table__labeltext"
        >
          <span>
            Oppilaitos
          </span>
          <span
            class="table__sortindicator"
          />
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
      data-row="3"
    >
      <td
        class="table__td"
        title="Aatu"
      >
        Aatu
      </td>
      <td
        class="table__td"
        title="Deltakoulu"
      >
        Deltakoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="1"
    >
      <td
        class="table__td"
        title="Heikki"
      >
        Heikki
      </td>
      <td
        class="table__td"
        title="Aakkoskoulu"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="2"
    >
      <td
        class="table__td"
        title="Heli"
      >
        Heli
      </td>
      <td
        class="table__td"
        title="Beetakaroteenikoulu"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="4"
    >
      <td
        class="table__td"
        title="Osmo"
      >
        Osmo
      </td>
      <td
        class="table__td"
        title="Celsiuksen koulu"
      >
        Celsiuksen koulu
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable Toisen sarakkeen nimen klikkaaminen järjestää sen mukaisesti 1`] = `
<table
  class="table"
>
  <thead
    class="table__head"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__th table__label"
      >
        <div
          class="table__labeltext"
        >
          <span>
            Nimi
          </span>
          <span
            class="table__sortindicator"
          />
        </div>
      </th>
      <th
        class="table__th table__label"
      >
        <div
          class="table__labeltext"
        >
          <span>
            Oppilaitos
          </span>
          <span
            class="table__sortindicator table__sortindicator--visible"
          >
            <span
              aria-hidden="true"
              class="material-icons icon icon--inline"
            >
              arrow_drop_down
            </span>
          </span>
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table__row"
      data-row="1"
    >
      <td
        class="table__td"
        title="Heikki"
      >
        Heikki
      </td>
      <td
        class="table__td"
        title="Aakkoskoulu"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="2"
    >
      <td
        class="table__td"
        title="Heli"
      >
        Heli
      </td>
      <td
        class="table__td"
        title="Beetakaroteenikoulu"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="4"
    >
      <td
        class="table__td"
        title="Osmo"
      >
        Osmo
      </td>
      <td
        class="table__td"
        title="Celsiuksen koulu"
      >
        Celsiuksen koulu
      </td>
    </tr>
    <tr
      class="table__row"
      data-row="3"
    >
      <td
        class="table__td"
        title="Aatu"
      >
        Aatu
      </td>
      <td
        class="table__td"
        title="Deltakoulu"
      >
        Deltakoulu
      </td>
    </tr>
  </tbody>
</table>
`;
